fixed z-index for header

--- a/ng-frontend/projects/cmdb/src/app/admin/connection-rules/connection-rules.component.scss
+++ b/ng-frontend/projects/cmdb/src/app/admin/connection-rules/connection-rules.component.scss
@@ -39,6 +39,7 @@
 .sticky-header {
     top: 2.5rem;
     position: sticky;
+    z-index: 1;
 }
 
 .filter-container {
